# concurrent-cpg-cxx

./: .gitignore  APIHelper.h  BidirectionalCallGraph.cxx  BidirectionalCallGraph.h  CMakeLists.txt  ConstructionPass.cxx  ConstructionPass.h  Debug.h  GraphBuilderFuncPass.cxx  GraphBuilderFuncPass.h  GraphBuilderPass.cxx  GraphBuilderPass.h  GraphBuilderProcessPass.cxx  GraphBuilderProcessPass.h  LTOLibCManager.cxx  LTOLibCManager.h  clear_grind.sh  emit_llvm_rs.sh  fields_struct.ll  main.cxx  no_std.rs  start_callgrind.sh  use_ce_pass.sh
andersen/: Andersen.cpp  Andersen.h  AndersenAA.cpp  AndersenAA.h  AndersenInfo.cpp  ConstraintCollect.cpp  ConstraintOptimize.cpp  ConstraintSolving.cpp  ExternalLibrary.cpp  FunctionPointerSolver.cxx  NodeFactory.cpp  NodeFactory.h  NodeMap.cxx  NodeMap.h  PtsSet.h  notes.md
components/: ComponentGraphBase.h  ControlFlowGraph.cxx  ControlFlowGraph.h
concurrency/: ConcurrencyManager.h  ConcurrencyPass.h  JoinNode.h  LocksetAnalysis.h  ThreadNode.h
files/: fields_constant_global.c  fields_constant_global.ll  fields_global.c  fields_global.ll  fields_struct  fields_struct.c  fields_struct.ll  ip_fields_struct.c  ip_fields_struct.ll  no_std.ll  no_std.rs  shared.c  shared.ll  simple.c  simple.ll  std_rs.ll  std_rs.rs  thread_rs.rs  two_level.ll
graph/: AtomicCmpXChgNode.h  AtomicRMWNode.h  BasicBlockNode.cxx  BasicBlockNode.h  BinaryOperatorNode.h  BlockComplexity.h  BranchNode.h  CallNode.cxx  CallNode.h  CastNode.h  ExtractValueNode.h  FenceNode.h  FunctionNode.cxx  FunctionNode.h  GetElementPtrNode.h  GlobalAllocation.cxx  GlobalAllocation.h  GlobalConstant.h  GraphBuilder.cxx  GraphBuilder.h  GraphManager.cxx  GraphManager.h  GraphParser.h  GroupNode.h  ICompareNode.h  InsertValueNode.h  InstructionOrdering.h  IntrinsicHandler.h  LiteralNode.cxx  LiteralNode.h  LoadNode.cxx  LoadNode.h  MutexNode.h  Node.cxx  Node.h  NullNode.h  ParamNode.cxx  ParamNode.h  PhiNode.h  StackAllocation.cxx  (+4 more)
passes/: CodeEliminationPass.cxx
playground/: GEP_Test.ll  Thread_Test.ll  main.cxx  util.h
tests/: HeapCopy.ll  TestALC.ll  TestALC.rs  test_andersen.cxx
utility/: TypeInformation.cxx  TypeInformation.h
